contrast fixing

--- a/my-react-portfolio/src/Components/ContactSection/contactSection.css
+++ b/my-react-portfolio/src/Components/ContactSection/contactSection.css
@@ -35,7 +35,8 @@
   text-decoration: none;
 }
 .contactSectionContainer h1 {
-  color: #9da993;
+  color: #3d4436;
+  /* color: #9da993; */
   text-align: center;
   font-size: 56px;
   font-weight: 700;
@@ -54,25 +55,19 @@
   margin: 0 auto;
   overflow: hidden;
   white-space: nowrap;
-  /* position: fixed; */
-  /* bottom: 0; */
-  background-color: #e4b4b4;
+  background-color: #3d4436;
+  /* background-color: #e4b4b4; */
   flex-direction: row;
   align-items: center;
 }
 .ticker {
-  /* display: inline-block; */
   margin-top: 5px;
   animation: marquee 20s linear infinite;
 }
 .item-collection-1 {
-  /* position: relative;
-  left: 0%; */
   animation: swap 20s linear infinite;
 }
 .item-collection-2 {
-  /* position: relative;
-  left: 0%; */
   animation: swap 20s linear infinite;
 }
 
