--- a/my-react-portfolio/src/Components/ImageProject/images.css
+++ b/my-react-portfolio/src/Components/ImageProject/images.css
@@ -3,8 +3,8 @@
   object-fit: cover;
   width: 343px;
   height: 200px;
-  border-bottom: 10px solid #9da993;
-  border-left: 10px solid #9da993;
+  border-bottom: 10px solid #3d4436;
+  border-left: 10px solid #3d4436;
   transition: transform 0.3s ease;
 }
 .images img.flipped {
