--- a/my-react-portfolio/src/Components/Introduction/introduction.css
+++ b/my-react-portfolio/src/Components/Introduction/introduction.css
@@ -32,7 +32,8 @@ h2 {
 .introSection h1 {
   font-size: 32px;
   line-height: 39px;
-  color: #9da993;
+  /* color: #9da993; */
+  color: #3d4436;
 }
 .introSection p {
   font-size: 18px;
