--- a/my-react-portfolio/src/Components/ProjectSection/projectSection.css
+++ b/my-react-portfolio/src/Components/ProjectSection/projectSection.css
@@ -1,5 +1,6 @@
 .projectSectionTitle {
-  color: #9da993;
+  color: #3d4436;
+  /* color: #9da993; */
   text-align: center;
   font-size: 56px;
   font-weight: 700;
