--- a/my-react-portfolio/src/Components/SkillSection/skillSection.css
+++ b/my-react-portfolio/src/Components/SkillSection/skillSection.css
@@ -3,7 +3,8 @@
   padding: 32px;
   flex-direction: column;
   align-items: center;
-  background-color: #9da993;
+  /* background-color: #9da993; */
+  background-color: #3d4436;
   color: white;
 }
 .skillSection h1 {
@@ -41,7 +42,7 @@
 }
 .upcomingTitle {
   padding: 5px;
-  background-color: #99ccbb;
+  background-color: #533745;
 }
 .moreTitle {
   padding: 5px;
