--- a/my-react-portfolio/src/Components/TechSection/techSection.css
+++ b/my-react-portfolio/src/Components/TechSection/techSection.css
@@ -5,7 +5,8 @@
   justify-content: center;
   align-items: center;
   gap: 64px;
-  background-color: #9da993;
+  /* background-color: #9da993; */
+  background-color: #3d4436;
   color: #ffffff;
 }
 .techSection h1 {
